# ReSynth

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  app.py  cli.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
examples/: colab_setup.ipynb
src/: __init__.py  cli.py  web.py
src/embeddings/: __init__.py  embedding_manager.py  vector_store.py
src/fetchers/: __init__.py  arxiv_fetcher.py  base_fetcher.py
src/processors/: __init__.py  text_processor.py
src/resynth/: __init__.py  cli.py  config.py  web.py
src/resynth/embeddings/: embedding_manager.py  vector_store.py
src/resynth/fetchers/: pubmed_fetcher.py
src/resynth/processors/: chunker.py
src/resynth/retrieval/: query_processor.py  retriever.py
src/resynth/synthesis/: answer_synthesizer.py  citation_formatter.py
src/retrieval/: __init__.py
src/synthesis/: __init__.py  answer_synthesizer.py
tests/: __init__.py  test_fetchers.py  test_integration.py  test_processors.py
