[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resynth"
dynamic = ["version"]
description = "Research Paper Synthesis Agent - Fetch, process, and query academic papers with AI-powered answers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ReSynth Team", email = "norizzabhii@gmail.com"},
]
maintainers = [
    {name = "ReSynth Team", email = "norizzabhii@gmail.com"},
]
keywords = [
    "research papers",
    "academic literature", 
    "machine learning",
    "natural language processing",
    "question answering",
    "information retrieval",
    "arxiv",
    "pubmed",
    "embeddings",
    "vector database",
    "citation generation",
    "paper synthesis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "arxiv>=1.4.0",
    "PyPDF2>=3.0.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "beautifulsoup4>=4.12.0",
    "biopython>=1.81.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.10.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/resynth-ai/resynth"
Documentation = "https://github.com/resynth-ai/resynth/blob/main/README.md"
Repository = "https://github.com/resynth-ai/resynth"
"Bug Tracker" = "https://github.com/resynth-ai/resynth/issues"
Changelog = "https://github.com/resynth-ai/resynth/blob/main/CHANGELOG.md"

[project.scripts]
resynth = "resynth.cli:main"

[tool.setuptools.dynamic]
version = {attr = "resynth.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["resynth*"]

[tool.setuptools.package-data]
resynth = [
    "*.md",
    "*.txt", 
    "*.yml",
    "*.yaml",
    "templates/*",
    "static/*",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["resynth"]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "arxiv.*",
    "chromadb.*",
    "sentence_transformers.*",
    "streamlit.*",
    "pdfplumber.*",
    "PyPDF2.*",
    "pubmed_parser.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=resynth",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/resynth"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
